feat(프로필) : MemberProfile 조회 성능 개선 및 관련 로직 리팩토링 (#482)
- MemberProfileRecord 및 PreferredExerciseRecord 추가
- 기존 엔티티 대신 Record를 활용하여 조회 성능 최적화
- MemberQueryServiceImpl 로직에서 Record를 활용한 처리방식으로 변경
- 테스트 코드 전반 수정 및 Mock 데이터 기반 테스트 강화